--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^1.0.2",
     "gatsby": "^2.20.7",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-baidu-tongji": "^2.0.0",
@@ -19,12 +20,13 @@
     "gatsby-plugin-sharp": "^2.4.13",
     "gatsby-plugin-typography": "^2.3.25",
     "gatsby-remark-copy-linked-files": "^2.1.40",
+    "gatsby-remark-highlight-code": "^1.2.0",
     "gatsby-remark-images": "^3.1.50",
     "gatsby-remark-prismjs": "^3.3.36",
     "gatsby-remark-responsive-iframe": "^2.2.34",
     "gatsby-remark-smartypants": "^2.1.23",
     "gatsby-source-filesystem": "^2.1.56",
-    "gatsby-transformer-remark": "^2.6.59",
+    "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.3.19",
     "gitalk": "^1.6.2",
     "prismjs": "^1.19.0",
