--- a/package.json
+++ b/package.json
@@ -62,6 +62,6 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo mock-test-start"
   }
 }
