--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           steps:
             - run: git config user.email "2326220@163.com"
             - run: git config user.name "twomeetings"
+            - run: npm install
             - run: npm run deploy
 workflows:
     build-and-test:
