--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "scripts": {
     "build": "gatsby build",
-    "deploy": "gatsby build && gh-pages -d public -b master -r git@github.com:twomeetings/twomeetings.github.io.git",
+    "deploy": "npm run build && gh-pages -d public -b master -r git@github.com:twomeetings/twomeetings.github.io.git",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
