--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo mock-test-start"
+    "test": "echo mock-test-start",
+    "addPost": "./scripts/addPost.sh"
   }
 }
