--- a/package.json
+++ b/package.json
@@ -59,9 +59,10 @@
   },
   "scripts": {
     "build": "gatsby build",
-    "deploy": "npm run build && gh-pages -d public -b master -r git@github.com:twomeetings/twomeetings.github.io.git",
+    "deploy-github": "npm run build && gh-pages -d public -b master -r git@github.com:twomeetings/twomeetings.github.io.git",
     "develop": "gatsby develop",
-    "deploy-tb": "NODE_ENV=production tcb hosting:deploy ./public/ -e myblog-2g4y35r1e15c5506",
+    "predeploy": "npm run build",
+    "deploy": "NODE_ENV=production tcb hosting:deploy ./public/ -e myblog-2g4y35r1e15c5506",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
