--- a/package.json
+++ b/package.json
@@ -3,55 +3,55 @@
   "private": true,
   "description": "A starter for a blog powered by Gatsby and Markdown",
   "version": "0.1.0",
-  "author": "Jacky Hsu<2326220@163.com>",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@deckdeckgo/highlight-code": "^1.0.2",
-    "gatsby-image": "^2.2.44",
-    "gatsby-plugin-baidu-tongji": "^2.0.0",
-    "gatsby-plugin-feed": "^2.3.29",
-    "gatsby-plugin-google-analytics": "^2.1.38",
-    "gatsby-plugin-manifest": "^2.2.48",
-    "gatsby-plugin-offline": "^3.0.41",
-    "gatsby-plugin-react-helmet": "^3.1.24",
-    "gatsby-plugin-sharp": "^2.4.13",
-    "gatsby-plugin-typography": "^2.3.25",
-    "gatsby-remark-copy-linked-files": "^2.1.40",
-    "gatsby-remark-highlight-code": "^1.2.0",
-    "gatsby-remark-images": "^3.1.50",
-    "gatsby-remark-prismjs": "^3.3.36",
-    "gatsby-remark-responsive-iframe": "^2.2.34",
-    "gatsby-remark-smartypants": "^2.1.23",
-    "gatsby-source-filesystem": "^2.1.56",
-    "gatsby-transformer-remark": "^2.7.1",
-    "gatsby-transformer-sharp": "^2.3.19",
-    "gitalk": "^1.6.2",
-    "prismjs": "^1.19.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "twomeetings-gitalk": "^1.6.4",
+    "gatsby": "^4.4.0",
+    "gatsby-plugin-feed": "^4.4.0",
+    "gatsby-plugin-gatsby-cloud": "^4.4.0",
+    "gatsby-plugin-google-analytics": "^4.4.0",
+    "gatsby-plugin-image": "^2.4.0",
+    "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-offline": "^5.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-remark-copy-linked-files": "^5.4.0",
+    "gatsby-remark-images": "^6.4.0",
+    "gatsby-remark-prismjs": "^6.4.0",
+    "gatsby-remark-responsive-iframe": "^5.4.0",
+    "gatsby-remark-smartypants": "^5.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-remark": "^5.4.0",
+    "gatsby-transformer-sharp": "^4.4.0",
+    "prismjs": "^1.25.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
-    "@cloudbase/cli": "^0.9.0",
-    "gatsby": "^2.24.11",
-    "gatsby-plugin-sass": "^2.3.12",
-    "gh-pages": "^2.2.0",
-    "node-sass": "^4.14.1",
-    "prettier": "^1.19.1"
+    "@babel/eslint-parser": "^7.16.5",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "gatsby-plugin-eslint": "^4.0.2",
+    "gatsby-plugin-sass": "^5.5.0",
+    "prettier": "^2.5.1",
+    "sass": "^1.47.0",
+    "typescript": "^4.5.4",
+    "typography": "^0.16.21",
+    "typography-theme-wordpress-2016": "^0.16.19",
+    "@cloudbase/cli": "^0.9.0"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
+  "license": "0BSD",
   "main": "n/a",
   "repository": {
     "type": "git",
