--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
+    "@cloudbase/cli": "^1.12.0",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint-config-react-app": "^7.0.0",
@@ -44,8 +45,7 @@
     "sass": "^1.47.0",
     "typescript": "^4.5.4",
     "typography": "^0.16.21",
-    "typography-theme-wordpress-2016": "^0.16.19",
-    "@cloudbase/cli": "^0.9.0"
+    "typography-theme-wordpress-2016": "^0.16.19"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
